# Sim-Throttle

./: README.md  Throttle.FCStd
Code/: .clang-format  CMakeLists.txt
Code/src/: CMakeLists.txt  compile_commands.json  example  throttle.c  tusb_config.h  usb_descriptors.c  usb_tool.c  usb_tool.h
Code/src/.cache/clangd/index/: flight_stick.c.1E517C42F8D12338.idx  tusb_config.h.371AA6997486E584.idx  usb_descriptors.c.6C704EB936F90ADD.idx  usb_descriptors.h.9C38C96116BB806F.idx  usb_tool.c.C5C669E2C5ED55A0.idx  usb_tool.h.77A4E72860D47E94.idx
Throttle Printing/: Throttle-Back_lever.3mf  Throttle-Case.3mf  Throttle-Handle Backplate Cover.3mf  Throttle-Handle Backplate.3mf  Throttle-Handle.3mf  Throttle-Support.3mf  Throttle-Support001.3mf  Throttle-front_lever.3mf
